<?xml version="1.0"?>
<package>
  <name>sawyer_pykdl</name>
  <version>0.1.0</version>
  <description>
    Nick's attempt to use PyKDL for Sawyer
  </description>

  <maintainer email="nselby@mit.edu">
    Nicholas Selby
  </maintainer>
  <license>BSD</license>
  <url type="repository">
    https://github.com/rupumped/sawyer_pykdl
  </url>
  <author>Nicholas Selby</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>intera_core_msgs</build_depend>
  <build_depend>intera_interface</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>liburdfdom-dev</build_depend>
  <build_depend>python_orocos_kdl</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>intera_core_msgs</run_depend>
  <run_depend>intera_interface</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>urdfdom</run_depend>
  <run_depend>python_orocos_kdl</run_depend>
  <run_depend>tf</run_depend>

</package>
